packages/block-library/src/section/editor.scss
/**
 * Section: All Alignment Settings
 */
.wp-block[data-type="core/section"] {

	// Ensure not rendering outside the element
	// as -1px causes overflow-x scrollbars
	.editor-block-list__insertion-point {
		left: 0;
		right: 0;
	}

	// Only applied when background is added to cancel out padding
	> .editor-block-list__block-edit > div > .wp-block-section.has-background > .editor-inner-blocks {
		margin-top: -#{$block-padding*2 + $block-spacing};
		margin-bottom: -#{$block-padding*2 + $block-spacing};
	}

	// Full Width Blocks
	// specificity required to only target immediate child Blocks of Section
	> .editor-block-list__block-edit > div > .wp-block-section > .editor-inner-blocks > .editor-block-list__layout > .wp-block[data-align="full"] {
		margin-left: auto;
		margin-right: auto;
		padding-left: $block-padding*2;
		padding-right: $block-padding*2;

		@include break-small() {
			padding-left: $block-padding*4 + $block-spacing/2; // 58px
			padding-right: $block-padding*4 + $block-spacing/2; // 58px
		}
	}
}

/**
 * Section: Full Width Alignment
 */
.wp-block[data-type="core/section"][data-align="full"] {

	margin-left: -#{$block-container-side-padding - $border-width};
	margin-right: -#{$block-container-side-padding - $border-width};

	// First tier of InnerBlocks must act like the container of the standard canvas
	> .editor-block-list__block-edit > div > .wp-block-section > .editor-inner-blocks {
		margin-left: auto;
		margin-right: auto;
		padding-left: 0;
		padding-right: 0;

		> .editor-block-list__layout {
			margin-left: 0;
			margin-right: 0;
		}
	}

	// Full Width Blocks
	// specificity required to only target immediate child Blocks of Section
	> .editor-block-list__block-edit > div > .wp-block-section > .editor-inner-blocks > .editor-block-list__layout > .wp-block[data-align="full"] {
		padding-right: 0;
		padding-left: 0;
		left: 0;
		width: 100%;
		max-width: none;

		// Allow to be flush with the edges of the canvas
		> .editor-block-list__block-edit {
			margin-left: 0;
			margin-right: 0;
		}
	}
}

